# money-app

./: README.md  bills_oscar.ipynb  pyproject.toml  saving_pots.ipynb
money_app/: functions.py  money_app.ipynb  notes.md  saving_pots.ipynb
money_app/data/: D2312.py  D2401.py  D2402.py
saving-pots/: saving_pots.ipynb
saving_pots/: ibesi-pipeline.excalidraw  ibesi.ipynb  saving_pots.ipynb
saving_pots/data/: D2312.py
