[tool.poetry]
name = "money-app"
version = "0.1.0"
description = ""
authors = ["Oscar Bastardo <osalbr.14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
pytest = "^7.4.3"
nbqa = "^1.7.1"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
